# crackmes-solutions

./: .gitignore  README.md
IOLI_crackmes_suite/: README.md
crackmes.one/level1_Blepperton_byte_playground/: CMakeLists.txt  README.md  main.c
crackmes.one/level1_RedXen_Ultimatum_CrackMe/: README.md
crackmes.one/level1_Shad3_Keyg3n_M1_1/: CMakeLists.txt  README.md  main.cc
crackmes.one/level1_bl4ack_Confusion/: CMakeLists.txt  README.md  main.c
crackmes.one/level1_dev0_x64_crackme_keygen/: CMakeLists.txt  README.md  main.c
crackmes.one/level1_ker2x_guild_hall_adventure/: README.md
crackmes.one/level1_oxygen240_find_the_password/: CMakeLists.txt  README.md  main.c
hackTheBox/arms_race/: README.md  emulator.py
hackTheBox/bincrypt_breaker/: README.md
hackTheBox/bombs_landed/: README.md
hackTheBox/coffee_invocation/: README.md  Verify1.java  Verify2.java
hackTheBox/ffmodule/: README.md
hackTheBox/hexecution/: README.md  decrypt.py  disasm.asm
hackTheBox/iterative_virus/: README.md
hackTheBox/maze/: README.md
hackTheBox/partial_encryption/: README.md
hackTheBox/ptrace_nopeeking/: README.md
hackTheBox/regas_town/: README.md
hackTheBox/rerop/: README.md
hackTheBox/spooky_license/: README.md  spookylicence.py
hackTheBox/virtually_mad/: README.md
hackTheBox/vmcrack/: 01_decrypt_and_print_message.asm  02_exit.asm  03_validate_input.asm  04_decrypt_flag.asm  README.md
hackTheBox/vvm/: README.md  vm_code.asm
hackTheBox/wayback/: README.md
picoCTF/otpImplementation/: .wat.swp  CMakeLists.txt  README.md  main.cpp  wat
(+29 files in other folders)
